--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/livaria_api
 
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
